# ejfat-lclstreamer

./: .gitignore  CLAUDE_CODE_SKILL.md  IMPLEMENTATION_SUMMARY.md  README_SKILL.md  SKILL_DOCUMENTATION.md  pyproject.toml
.claude/skills/: e2sar-integration.md
docs/source/: e2sar_integration.md  index.md
examples/: e2sar-back-to-back-consumer.yaml  e2sar-back-to-back-producer.yaml  e2sar-consumer.yaml  e2sar-producer.yaml
src/lclstreamer/data_handlers/: setup.py
src/lclstreamer/data_handlers/streaming/: e2sar.py
src/lclstreamer/event_data_sources/: setup.py
src/lclstreamer/event_data_sources/e2sar/: __init__.py  event_sources.py
src/lclstreamer/models/: parameters.py
tests/: E2SAR_TEST_SUMMARY.txt  README_E2SAR_TESTS.md  test_e2sar_back_to_back.py
