[project]
name = "lclstreamer"
requires-python = ">=3.11,<3.14"
version = "0.3.0"
dependencies = [
    "typer",
    "numpy",
    "pydantic",
    "stream @ git+https://github.com/frobnitzem/stream.py",
    "aiostream",
    "pyyaml",
    "pyzmq",
    "pynng",
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-click",
    "sphinxcontrib-images",
    "sphinxcontrib-mermaid",
    "mypy",
    "h5py-stubs",
    "cbor",
    "bitshuffle",
    "pytest",
    "types-PyYAML"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.scripts]
lclstreamer = "lclstreamer.cmd.lclstreamer:app"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.isort]
py_version = 311
profile = "black"

[tool.mypy]
show_error_codes = true
python_version = 3.11

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.psana1]
channels = ["lcls-i"]

[tool.pixi.feature.psana2]
channels = ["lcls-ii"]

[tool.pixi.pypi-dependencies]
lclstreamer = { path = ".", editable = true }

[tool.pixi.environments]
psana1 = { features = ["psana1"], solve-group = "linux" }
psana2 = { features = ["psana2"], solve-group = "linux" }

[tool.pixi.feature.psana1.activation]
scripts = ["activation-psana1.sh"]

[tool.pixi.feature.psana2.activation]
scripts = ["activation-psana2.sh"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
openmpi = "*"
mpi4py = "*"
h5py = "*"
hdf5plugin = ">=5.1.0"

[tool.pixi.feature.psana1.dependencies]
python = "3.11.*"
psana = "==4.0.66"

[tool.pixi.feature.psana1.target.linux-64.dependencies]

[tool.pixi.feature.psana2.dependencies]
python = "3.13.*"
psana = { version="==4.2.4", channel="lcls-ii" }

[tool.pixi.feature.psana2.target.linux-64.dependencies]

[dependency-groups]
psana1 = [
    "typer",
    "numpy",
    "pydantic",
    "stream @ git+https://github.com/frobnitzem/stream.py",
    "aiostream",
    "pyyaml",
    "pyzmq",
    "pynng",
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-click",
    "sphinxcontrib-images",
    "sphinxcontrib-mermaid",
    "mypy",
    "h5py-stubs",
    "cbor",
    "bitshuffle",
    "pytest",
    "types-PyYAML"
]
psana2 = [
    "typer",
    "numpy",
    "pydantic",
    "stream @ git+https://github.com/frobnitzem/stream.py",
    "aiostream",
    "pyyaml",
    "pyzmq",
    "pynng",
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-click",
    "sphinxcontrib-images",
    "sphinxcontrib-mermaid",
    "mypy",
    "h5py-stubs",
    "cbor",
    "bitshuffle",
    "pytest",
    "types-PyYAML"
]

[tool.pixi.tasks]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
